--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>LightsOut</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Ember-D3 tutorial for Ember ATX Meetup">
+        <meta name="author" content="Isaac J. Lee">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{content-for "head"}}
+        <title>Lights Out</title>
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/lights-out.css">
+        {{content-for "head"}}
 
-    {{content-for "head-footer"}}
-  </head>
-  <body>
-    {{content-for "body"}}
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC">
+        <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+        <link rel="stylesheet" href="{{rootURL}}assets/lights-out.css">
+        <link rel="icon" href="/assets/favicon.png">
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/lights-out.js"></script>
+        {{content-for "head-footer"}}
+    </head>
+    <body>
+        {{content-for "body"}}
 
-    {{content-for "body-footer"}}
-  </body>
+        <script src="{{rootURL}}assets/vendor.js"></script>
+        <script src="{{rootURL}}assets/lights-out.js"></script>
+
+        {{content-for "body-footer"}}
+    </body>
 </html>
